--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,22 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!--	Support for Firebase	-->
+		<dependency>
+			<groupId>com.github.fabiomaffioletti</groupId>
+			<artifactId>spring-boot-starter-data-firebase</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.20.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -103,5 +119,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
