--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,12 @@
 			<artifactId>google-cloud-storage</artifactId>
 			<version>2.20.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
