--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^4.6.2",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
